--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,9 +10,5 @@ body {
   background-position: center;
   background-attachment: fixed;
   color: rgb(255, 255, 255);
-  
-}
-
-footer {
-  bottom: 0;
+  @apply bg-cover bg-center bg-fixed;
 }
